# tokio-postgres-mapper

./: Cargo.toml  README.md  foo.rs
examples/src/: main.rs
postgres_mapper_derive/: Cargo.toml
postgres_mapper_derive/src/: lib.rs
src/: lib.rs
