[package]
authors = ["Asdf"]
description = "Struct mapping for postgres."
documentation = "https://docs.rs/postgres-mapper"
homepage = "https://github.com/zeyla/postgres-mapper"
keywords = ["tokio", "postgres", "mapper"]
license = "ISC"
name = "tokio-postgres-mapper"
repository = "https://github.com/githubaccount624/tokio-postgres-mapper"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
tokio-postgres = "0.5"
