[package]
authors = ["Asdf"]
description = "Postgres struct mapper proc-macro."
documentation = "https://docs.rs/postgres-mapper-derive"
homepage = "https://github.com/githubaccount624/tokio-postgres-mapper"
keywords = ["tokio", "postgres", "mapper"]
license = "ISC"
name = "tokio-postgres-mapper-derive"
repository = "https://github.com/githubaccount624/tokio-postgres-mapper"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.3"
syn = "0.15"
tokio-postgres = "0.5"